src/style/post.less
.matecho-comment-parent {
  margin-bottom: 0.5rem;

  &:last-child {
    margin-bottom: 0;
  }
}

.matecho-comment-wrapper .mdui-prose p {
  margin-top: 0;
  margin-bottom: 0;
}

.matecho-comment-form {
  .matecho-comment-cancel-btn {
    display: none;
  }

  &.matecho-comment-form__reply .matecho-comment-cancel-btn {
    display: inline-block;
  }
}

.matecho-form-loading-mask,
.matecho-form-lock-mask {
  opacity: 0;
  transition: 0.2s;
  pointer-events: none;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  z-index: 10000;
}

.matecho-comment-form__lock .matecho-form-lock-mask,
.matecho-form__loading .matecho-form-loading-mask {
  opacity: 1;
  pointer-events: initial;
}

.matecho-comment-form__lock
  > :not(.matecho-form-loading-mask, .matecho-form-lock-mask),
.matecho-form__loading
  > :not(.matecho-form-loading-mask, .matecho-form-lock-mask) {
  opacity: 0.3;
  pointer-events: none;
}

.matecho-code-lang {
  position: absolute;
  right: 8px;
  top: 4px;
  transition: 0.2s;
  opacity: 0.3;
  font-size: 0.75rem;
  user-select: none;

  .code-running &,
  pre:hover & {
    opacity: 0;
  }
}

.matecho-code-action-wrapper {
  position: absolute;
  top: 5px;
  right: 5px;
  display: flex;
  align-items: center;
  user-select: none;
  gap: 0.25rem;
  opacity: 0;
  transition: 0.2s;

  .code-running &,
  pre:hover & {
    opacity: 1;
  }

  mdui-button-icon {
    opacity: 0.3;
    transition: opacity 0.2s;

    [loading],
    &:hover {
      opacity: 1;
    }
  }
}

.matecho-comment-form__in {
  animation: comment-form-in 0.3s cubic-bezier(0.2, 0, 0, 1);
  overflow: hidden;
}

.matecho-comment-form__out {
  animation: comment-form-out 0.3s cubic-bezier(0.2, 0, 0, 1);
  overflow: hidden;
}

@keyframes comment-form-in {
  from {
    opacity: 0;
    height: 0;
    padding: 0;
  }

  to {
    opacity: 1;
    height: var(--m-height);
    padding: 1rem 0;
  }
}

@keyframes comment-form-out {
  to {
    opacity: 0;
    height: 0;
    padding: 0;
  }

  from {
    opacity: 1;
    height: var(--m-height);
    padding: 1rem 0;
  }
}

@media (prefers-color-scheme: dark) {
  .shiki,
  .shiki span {
    color: var(--shiki-dark) !important;
    font-style: var(--shiki-dark-font-style) !important;
    font-weight: var(--shiki-dark-font-weight) !important;
    text-decoration: var(--shiki-dark-text-decoration) !important;
  }
}

pre.line-numbers {
  position: relative;
  counter-reset: line-number;

  & > code {
    margin-left: 3em;
    white-space: inherit;
    padding-left: 0.8em;
    border-top-left-radius: 0;
    border-bottom-left-radius: 0;

    &::after {
      content: " ";
      visibility: hidden;
    }
  }

  .line-numbers-rows {
    position: absolute;
    pointer-events: none;
    padding: 0.8571em 0;
    box-sizing: border-box;
    top: 0;
    left: 0;
    width: 3em;
    letter-spacing: -1px;
    font-size: 0.875em;
    user-select: none;
    height: 100%;
    background-color: rgb(var(--mdui-color-surface-container));
    border-radius: var(--mdui-shape-corner-extra-small) 0 0
      var(--mdui-shape-corner-extra-small);

    span {
      display: block;
      counter-increment: line-number;

      &::before {
        content: counter(line-number);
        color: #999;
        display: block;
        padding-right: 0.8em;
        text-align: right;
      }
    }
  }
}

pre.mermaid[data-processed=""] {
  height: 120px;
  font-size: 0 !important;
  overflow: hidden;
  user-select: none;
  background-color: rgb(var(--mdui-color-surface-container));
  border-radius: var(--mdui-shape-corner-extra-small);
  color: rgb(var(--mdui-color-on-surface-container));
  display: flex;
  align-items: center;
  justify-content: center;
  margin-top: 0.5rem;

  &::after {
    content: "正在加载Mermaid...";
    font-size: 1rem;
    opacity: 0.6;
  }

  &:first-child {
    margin-top: 0;
  }
}

pre.mermaid[data-processed="true"] {
  text-align: center;

  & [id^="container-mermaid"][style*="flex"] {
    justify-content: center;
  }
}

pre.block-editable {
  code {
    overflow: hidden;
    user-select: none;
  }

  .editor {
    white-space: pre;
    word-break: keep-all;
    overflow: hidden;
    overflow-x: auto;
    position: absolute;
    left: 0;
    border: none;
    background: transparent;
    width: calc(100% - 3.8em);
    height: 100%;
    padding: 0.8571em 1.1429em;
    margin-left: 3.8em;
    padding-left: 0;
    box-sizing: border-box;
    font-size: 0.875em;
    line-height: 1.75;
    font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas,
      "Liberation Mono", "Courier New", monospace;
    color: transparent;
    appearance: none;
    resize: none;
    outline: none;
    tab-size: 4;
    caret-color: black;
  }
}

pre.has-output {
  margin-bottom: 0;

  code {
    border-bottom-right-radius: 0;
  }

  .line-numbers-rows {
    border-bottom-left-radius: 0;
  }
}

pre.output {
  margin-top: 0;

  code {
    padding-bottom: 0.5rem;
    position: relative;
    overflow: hidden;
    overflow-x: auto;
    user-select: initial;
    border-radius: 0;

    &.empty {
      font-style: italic;
    }

    &.stderr {
      color: red;

      &::before {
        content: "Error";
      }
    }

    &.stdout::before {
      content: "Output";
    }

    &::before {
      position: absolute;
      left: 16px;
      top: -4px;
      font-size: 0.75em;
      opacity: 0.5;
      font-style: normal;
    }

    &:last-child {
      border-radius: 0 0 var(--mdui-shape-corner-extra-small)
        var(--mdui-shape-corner-extra-small);
    }
  }
}

@media (prefers-color-scheme: dark) {
  pre textarea.editor {
    caret-color: white;
  }
}

